# markhola

./: .gitignore  Cargo.toml  LICENSE  PLAN.MD  README.md  ROBOT_GUIDELINES.md
.codex/skills/markhola-release-artifact-validation/: SKILL.md
assets/help/: Documentation.md
docs/: release-validation-v0.7.6.md  release-validation-v0.7.7.md  v0.7.6-theme-view-design.md  v0.7.6-theme-view-test.md  v0.7.7-empty-status-bar-design.md  v0.7.7-empty-status-bar-test.md  v0.7.7-multi-drag-open-design.md  v0.7.7-multi-drag-open-test.md  v0.7.7-native-footer-design.md  v0.7.7-native-footer-test.md
examples/: basic.md  languages.md  math.md  media.md  mermaid.md  multi-document.md  open-multiple-1.md  open-multiple-2.md  pdf-export.md  theme-showcase.md  toc.md
scripts/: build_app.sh  dev_watch_app.sh  package_dmg.sh  release_publish_workflow.md  release_regression.sh  release_regression_checklist.md
src/: app.rs  document.rs  file_io.rs  html_export.rs  main.rs  markdown.rs  pdf_export.rs  printing.rs  render_assets.rs  workspace.rs
src/implementation/: file_io.rs  html_export.rs  markdown.rs  pdf_export.rs  pdf_export_stub.rs  printing.rs  printing_stub.rs  render_assets.rs  workspace.rs
src/implementation/app/: app_theme.rs  asset_access.rs  bootstrap.rs  close_actions.rs  document_actions.rs  documentation.rs  event_loop.rs  export_actions.rs  implementation.rs  interface.rs  interface_clock.rs  interface_constants.rs  interface_dispatch.rs  interface_logging.rs  interface_types.rs  ipc.rs  macos_menu.rs  menu_app.rs  menu_edit.rs  menu_file.rs  menu_file_export.rs  menu_file_items.rs  menu_help.rs  menu_install.rs  menu_state.rs  menu_tab.rs  menu_target.rs  menu_view.rs  native_footer.rs  navigation_actions.rs  platform.rs  runtime.rs  save_actions.rs  shell.rs  shell_events.rs  shell_markup.html  shell_markup.rs  shell_script.js  shell_script.rs  shortcuts.rs  (+5 more)
src/implementation/document/: implementation.rs  interface.rs
src/interface/: app.rs  document.rs  file_io.rs  html_export.rs  markdown.rs  pdf_export.rs  printing.rs  render_assets.rs  workspace.rs
src/tests/: app.rs  document.rs  file_io.rs  html_export.rs  markdown.rs  pdf_export.rs  workspace.rs
tech-notes/: v0.8.0-windows-design.md  v0.8.0-windows-test.md
themes/: README.md
themes/dark/: layout.css
themes/default/: layout.css
themes/github/: layout.css
themes/light/: layout.css
